8279675: CDS cannot handle non-existent JAR file in bootclassapth